fix: firebase key